--- a/website/docs/tutorial/application.mdx
+++ b/website/docs/tutorial/application.mdx
@@ -10,6 +10,9 @@ options:
 
 # 手动创建项目
 
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
+
 在[快速上手](../quick-start.mdx)中，我们已经介绍了如何安装和使用 `nb-cli` 创建一个项目。在本章节中，我们将简要介绍如何在不使用 `nb-cli` 的方式创建一个机器人项目的**最小实例**并启动。如果你想要了解 NoneBot 的启动流程，也可以阅读本章节。
 
 :::caution 警告
