--- a/website/docs/tutorial/application.mdx
+++ b/website/docs/tutorial/application.mdx
@@ -33,7 +33,8 @@ import TabItem from "@theme/TabItem";
 
 1. （可选）创建虚拟环境，以 venv 为例
 
-   windows 平台：
+<Tabs groupId="platform">
+  <TabItem value="windows" label="windows 平台" default>
 
    ```bash
    # 创建虚拟环境
@@ -41,8 +42,8 @@ import TabItem from "@theme/TabItem";
    # 激活虚拟环境
    .venv\Scripts\activate
    ```
-
-   linux/macOS 平台：
+  </TabItem>
+  <TabItem value="linux/macOS" label="linux/macOS">
 
    ```bash
    # 创建虚拟环境
@@ -50,6 +51,9 @@ import TabItem from "@theme/TabItem";
    # 激活虚拟环境
    source .venv/bin/activate
    ```
+
+  </TabItem>
+</Tabs>
 
 2. 安装 nonebot2 以及驱动器，以 fastapi 为例
 
