--- a/website/docs/tutorial/application.mdx
+++ b/website/docs/tutorial/application.mdx
@@ -33,8 +33,7 @@ import TabItem from "@theme/TabItem";
 
 1. （可选）创建虚拟环境，以 venv 为例
 
-   <Tabs groupId="platform">
-     <TabItem value="windows" label="Windows" default>
+   <Tabs groupId="platform"><TabItem value="windows" label="Windows" default>
 
     ```bash
     # 创建虚拟环境
