--- a/website/docs/tutorial/application.mdx
+++ b/website/docs/tutorial/application.mdx
@@ -42,8 +42,7 @@ import TabItem from "@theme/TabItem";
     .venv\Scripts\activate
     ```
 
-     </TabItem>
-     <TabItem value="linux/macos" label="Linux/macOS">
+     </TabItem><TabItem value="linux/macos" label="Linux/macOS">
 
        ```bash
        # 创建虚拟环境
@@ -52,8 +51,7 @@ import TabItem from "@theme/TabItem";
        source .venv/bin/activate
        ```
 
-     </TabItem>
-   </Tabs>
+     </TabItem></Tabs>
 
 2. 安装 nonebot2 以及驱动器，以 Fastapi 驱动器为例
 
