--- a/website/docs/tutorial/application.mdx
+++ b/website/docs/tutorial/application.mdx
@@ -55,8 +55,7 @@ import TabItem from "@theme/TabItem";
 
 2. 安装 nonebot2 以及驱动器，以 Fastapi 驱动器为例
 
-   <Tabs groupId="platform">
-     <TabItem value="windows" label="Windows" default>
+   <Tabs groupId="platform"><TabItem value="windows" label="Windows" default>
 
        ```bash
        pip install "nonebot2[fastapi]"
@@ -69,8 +68,7 @@ import TabItem from "@theme/TabItem";
        pip install "nonebot2[fastapi]"
        ```
 
-     </TabItem>
-   </Tabs>
+     </TabItem></Tabs>
 
    驱动器包名可以在 [驱动器商店](/store/drivers) 中找到，请替换上文方括号中的内容。
 
