--- a/website/docs/tutorial/application.mdx
+++ b/website/docs/tutorial/application.mdx
@@ -61,8 +61,7 @@ import TabItem from "@theme/TabItem";
        pip install "nonebot2[fastapi]"
        ```
 
-     </TabItem>
-     <TabItem value="linux/macos" label="Linux/macOS">
+     </TabItem><TabItem value="linux/macos" label="Linux/macOS">
 
        ```bash
        pip install "nonebot2[fastapi]"
