--- a/website/versioned_docs/version-2.4.3/best-practice/alconna/uniseg/utils.mdx
+++ b/website/versioned_docs/version-2.4.3/best-practice/alconna/uniseg/utils.mdx
@@ -159,7 +159,7 @@ async def _(target: MsgTarget):
 
 事实上，构造 `Target` 对象时，`self_id`, `scope`, `adapter` 和 `platform` 都会参与到 `selector` 的构造中。
 
-::tip
+:::tip
 
 你其实可以使用 `Target` 来帮你筛选 `Bot` 对象：
 
