:memo: fix mangled format due to prettier
https://github.com/prettier/prettier/issues/12209

--- a/website/docs/tutorial/application.mdx
+++ b/website/docs/tutorial/application.mdx
@@ -33,7 +33,8 @@ import TabItem from "@theme/TabItem";
 
 1. （可选）创建虚拟环境，以 venv 为例
 
-   <Tabs groupId="platform"><TabItem value="windows" label="Windows" default>
+   <Tabs groupId="platform">
+   <TabItem value="windows" label="Windows" default>
 
    ```bash
    # 创建虚拟环境
@@ -42,7 +43,8 @@ import TabItem from "@theme/TabItem";
    .venv\Scripts\activate
    ```
 
-   </TabItem><TabItem value="linux/macos" label="Linux/macOS">
+   </TabItem>
+   <TabItem value="linux/macos" label="Linux/macOS">
 
    ```bash
    # 创建虚拟环境
@@ -51,23 +53,27 @@ import TabItem from "@theme/TabItem";
    source .venv/bin/activate
    ```
 
-   </TabItem></Tabs>
+   </TabItem>
+   </Tabs>
 
 2. 安装 nonebot2 以及驱动器，以 Fastapi 驱动器为例
 
-   <Tabs groupId="platform"><TabItem value="windows" label="Windows" default>
+   <Tabs groupId="platform">
+   <TabItem value="windows" label="Windows" default>
 
    ```bash
    pip install "nonebot2[fastapi]"
    ```
 
-   </TabItem><TabItem value="linux/macos" label="Linux/macOS">
+   </TabItem>
+   <TabItem value="linux/macos" label="Linux/macOS">
 
    ```bash
    pip install "nonebot2[fastapi]"
    ```
 
-   </TabItem></Tabs>
+   </TabItem>
+   </Tabs>
 
    驱动器包名可以在 [驱动器商店](/store/drivers) 中找到，请替换上文方括号中的内容。
 
