--- a/website/versioned_docs/version-2.4.2/best-practice/testing/behavior.mdx
+++ b/website/versioned_docs/version-2.4.2/best-practice/testing/behavior.mdx
@@ -163,7 +163,7 @@ async def test_example(app: App):
    - `**kwargs`：send 方法的额外参数。
 
 2. `should_call_api`
-   定义事件响应器预期调用的平台 API 接口，即通过[调用平台 API](../../appendices/api-calling.mdx#调用平台-API)进行的操作。`should_call_api` 有四个参数：
+   定义事件响应器预期调用的平台 API 接口，即通过[调用平台 API](../../appendices/api-calling.mdx#调用平台-api)进行的操作。`should_call_api` 有四个参数：
 
    - `api`：API 名称。
    - `data`：预期的请求数据。
