--- a/website/versioned_docs/version-2.4.3/best-practice/alconna/matcher.mdx
+++ b/website/versioned_docs/version-2.4.3/best-practice/alconna/matcher.mdx
@@ -150,7 +150,7 @@ async def handle(
 
 - `xxx: CommandResult`
 - `xxx: Arparma`：命令的[解析结果](./command.md#解析结果)
-- `xxx: Duplication`：命令的解析结果的 [`Duplication`](./command.md#Duplication)
+- `xxx: Duplication`：命令的解析结果的 [`Duplication`](./command.md#duplication)
 - `xxx: Alconna`：命令的源命令
 - `<key>: Match[<type>]`：上述的匹配项，使用 `key` 作为查询路径
 - `xxx: Query[<type>] = Query(<path>, default)`：上述的查询项，必需声明默认值以设置查询路径 `path`
