--- a/website/versioned_docs/version-2.4.3/best-practice/multi-adapter.mdx
+++ b/website/versioned_docs/version-2.4.3/best-practice/multi-adapter.mdx
@@ -42,7 +42,7 @@ async def handle_function():
 
 #### 处理近似事件
 
-对于一系列**差异不大**的事件，我们往往具有相同的处理逻辑。这时，我们不希望将相同的逻辑编写两遍，而应该复用代码，以实现在同一个事件处理函数中处理多个近似事件。我们可以使用[事件重载](../advanced/dependency.mdx#Event)的特性来实现这一功能。例如：
+对于一系列**差异不大**的事件，我们往往具有相同的处理逻辑。这时，我们不希望将相同的逻辑编写两遍，而应该复用代码，以实现在同一个事件处理函数中处理多个近似事件。我们可以使用[事件重载](../advanced/dependency.mdx#event)的特性来实现这一功能。例如：
 
 <Tabs groupId="python">
   <TabItem value="3.10" label="Python 3.10+" default>
