📝 Docs: Fix typo in userinfo plugin link

--- a/website/versioned_docs/version-2.4.3/best-practice/multi-adapter.mdx
+++ b/website/versioned_docs/version-2.4.3/best-practice/multi-adapter.mdx
@@ -204,5 +204,5 @@ async def handle_onebot_reply(bot: OnebotBot, state: T_State, location: str = Ar
   - 支持的适配器: OneBot V11/V12, Telegram, Feishu, QQ, Console, Kaiheila, Mirai, Minecraft, Discord, Satori, Dodo, Kritor, Mail, WXMP, Gewechat
 - [session](https://github.com/noneplugin/nonebot-plugin-session): 会话信息提取与会话 id 定义插件
   - 支持的适配器: OneBot V11/V12, Console, Kaiheila, Telegram, Feishu, Red, DoDo, Satori, QQ, Discord
-- [userinfo](https://github.com/noneplugin/nonebot-plugin-userinfo: 用户信息获取插件
+- [userinfo](https://github.com/noneplugin/nonebot-plugin-userinfo): 用户信息获取插件
   - 支持的适配器: OneBot V11/V12, Console, Kaiheila, Telegram, Feishu, Red, DoDo, Satori, QQ, Discord
