:memo: 添加并更新关于新项目格式和新 CLI 的说明

--- a/website/docs/quick-start.mdx
+++ b/website/docs/quick-start.mdx
@@ -81,8 +81,9 @@ nb create
    请注意，多选项使用**空格**选中或取消，**回车**确认。
 
    ```bash
-   [?] 要使用哪些驱动器? FastAPI (FastAPI 驱动器)
    [?] 要使用哪些适配器? Console (基于终端的交互式适配器)
+   [?] 要使用哪些驱动器? FastAPI (FastAPI 驱动器)
+   [?] 要使用什么本地存储策略? 用户全局 (默认，适用于单用户下单实例)
    [?] 立即安装依赖? (Y/n) Yes
    [?] 创建虚拟环境? (Y/n) Yes
    ```
