--- a/website/docs/tutorial/store.mdx
+++ b/website/docs/tutorial/store.mdx
@@ -24,6 +24,9 @@ NoneBot 提供了一个[商店](/store/plugins)，商店内容均由社区开发
 
 商店中每个内容的卡片都包含了其名称和简介等信息，点击**卡片右上角**链接图标即可跳转到其主页。
 
+与此同时，NB-CLI 也提供了一个 TUI 版本的商店界面，可通过 `nb adapter store`、`nb plugin store`、`nb driver store` 命令或 CLI
+交互式界面进入。其提供了接近网页商店的体验，同时允许快捷安装到当前项目。
+
 ## 安装插件
 
 <Asciinema
