Add conditional checks for Docker actions
1.使用 'if' 条件，确保此步骤仅在推送到 'main' 分支时运行，避免了 'enable' 属性的错误。2.确保只有在标签生成步骤成功运行时（即在 main 分支 push 时），才执行构建和推送。 3.docker image推送时增加latest标签

--- a/website/versioned_docs/version-2.4.4/best-practice/deployment.mdx
+++ b/website/versioned_docs/version-2.4.4/best-practice/deployment.mdx
@@ -209,6 +209,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Generate Tags
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: docker/metadata-action@v4
         id: metadata
         with:
@@ -219,8 +220,10 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=sha
+            type=raw,value=latest
 
       - name: Build and Publish
+        if: steps.metadata.outputs.tags != ''
         uses: docker/build-push-action@v4
         with:
           context: .
